--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import { getPostMetadata, formatDate, formatReadingTime, getAuthor } from '../../lib/metadata';
+import { getPostOGConfig, generateBlogPostStructuredData } from '../../lib/og-image';
 import Layout from '../../layouts/Layout.astro';
 import Tag from '../../components/global/Tag';
 
@@ -25,9 +26,24 @@ if (!metadata) {
 }
 
 const author = getAuthor(metadata.author);
+const ogConfig = getPostOGConfig(metadata);
+const canonicalURL = Astro.site ? new URL(Astro.url.pathname, Astro.site) : Astro.url;
+const structuredData = generateBlogPostStructuredData(metadata, canonicalURL.toString());
 ---
 
-<Layout title={metadata.title}>
+<Layout 
+  title={ogConfig.title}
+  description={ogConfig.description}
+  image={ogConfig.image}
+  type={ogConfig.type}
+  publishedTime={ogConfig.publishedTime}
+  modifiedTime={ogConfig.modifiedTime}
+  author={ogConfig.author}
+  section={ogConfig.section}
+  tags={ogConfig.tags}
+  structuredData={structuredData}
+  noIndex={metadata.draft}
+>
   <main class="max-w-4xl mx-auto px-4 py-8">
     <!-- Blog Header -->
     <header class="mb-8">
